; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_smu8_smumgr.c_smu8_smu_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_smu8_smumgr.c_smu8_smu_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.smu8_smumgr*, i32* }
%struct.smu8_smumgr = type { %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32, i32, i32 }
%struct.TYPE_4__ = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*)* @smu8_smu_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu8_smu_fini(%struct.pp_hwmgr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pp_hwmgr*, align 8
  %4 = alloca %struct.smu8_smumgr*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %3, align 8
  %5 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %6 = icmp eq %struct.pp_hwmgr* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %9 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %45

15:                                               ; preds = %7
  %16 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %17 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %16, i32 0, i32 0
  %18 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %17, align 8
  store %struct.smu8_smumgr* %18, %struct.smu8_smumgr** %4, align 8
  %19 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %20 = icmp ne %struct.smu8_smumgr* %19, null
  br i1 %20, label %21, label %44

21:                                               ; preds = %15
  %22 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %23 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 2
  %25 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %26 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  %28 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %29 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = call i32 @amdgpu_bo_free_kernel(i32* %24, i32* %27, i32* %30)
  %32 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %33 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 2
  %35 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %36 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %39 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = call i32 @amdgpu_bo_free_kernel(i32* %34, i32* %37, i32* %40)
  %42 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %43 = call i32 @kfree(%struct.smu8_smumgr* %42)
  br label %44

44:                                               ; preds = %21, %15
  store i32 0, i32* %2, align 4
  br label %45

45:                                               ; preds = %44, %12
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32 @amdgpu_bo_free_kernel(i32*, i32*, i32*) #1

declare dso_local i32 @kfree(%struct.smu8_smumgr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
